fixed modal overflow and body scroll

--- a/src/components/Cart/Cart.module.css
+++ b/src/components/Cart/Cart.module.css
@@ -1,6 +1,11 @@
 .cart-container {
-  padding: 10px 30px;
+  padding: 10px 10px 10px 20px;
   min-width: 35rem;
+}
+
+.cart-items {
+  max-height: 30rem;
+  overflow-y: auto;
 }
 
 .controls {
