--- a/src/components/UI/Modal.module.css
+++ b/src/components/UI/Modal.module.css
@@ -4,6 +4,8 @@
   left: 0;
   width: 100%;
   height: 100vh;
+  max-height: 100vh;
+  overflow: hidden;
   z-index: 50;
   background: rgba(0, 0, 0, 0.75);
 }
@@ -14,7 +16,7 @@
   min-width: 400px;
   background-color: #fff;
   border-radius: 5px;
-  position: absolute;
+  position: fixed;
   top: 8%;
   left: 50%;
   transform: translate(-50%);
